@@ -4,6 +4,7 @@
 BZFlag 1.12.0  (was 1.11.x)
 ---------------------------
 
+* Linux event device joystick support - Micah Dowty
 * Inform users when they are baned on login, and send the ban reason,
 	ban origonator, and source of the ban to the client - Jeff Myers
 * Added the SHORTBAN bzfs priviledge - Dave Rodgers, Daniel Leeds
